# Devfetch

./: .gitignore  Cargo.toml  DESIGN.md  README.md
src/: cli.rs  main.rs  types.rs
src/core/: classify.rs  exec.rs  mod.rs  output.rs  path_scan.rs  probe.rs  project_detect.rs
