[package]
name = "devfetch"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A discovery engine for developer tools and project ecosystems"
license = "MIT"
repository = "https://github.com/yourusername/devfetch"
keywords = ["cli", "developer-tools", "discovery"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "devfetch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
which = "6.0"
walkdir = "2.4"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
